# freertos-unix-port

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
libs/FreeRTOS/: CMakeLists.txt
libs/FreeRTOS/portable/: FreeRTOSConfig.h
